@@ -1,0 +1,5 @@
+pkglib_LTLIBRARIES = HwModelGenerator.la
+HwModelGenerator_la_SOURCES = \
+ModelGenerator.h ModelGenerator.fh ModelGenerator.icc ModelGenerator.cc
+HwModelGenerator_la_LDFLAGS = -module
+
