@@ -1,0 +1,64 @@
+// -*- C++ -*-
+//
+// This is the implementation of the inlined member functions of
+// the ModelGenerator class.
+//
+
+namespace Herwig {
+
+inline ModelGenerator::ModelGenerator() {}
+
+inline ModelGenerator::ModelGenerator(const ModelGenerator & x)
+  : Interfaced(x) {}
+
+inline IBPtr ModelGenerator::clone() const {
+  return new_ptr(*this);
+}
+
+inline IBPtr ModelGenerator::fullclone() const {
+  return new_ptr(*this);
+}
+
+inline void ModelGenerator::doupdate() throw(UpdateException) {
+  Interfaced::doupdate();
+  // First update base class.
+  bool redo = touched();
+  // redo if touched.
+//  UpdateChecker::check(aDependentMember, redo);
+  // Update referenced objects on which this depends redo is set to true
+  // if the dependent object is touched.
+//  for_each(ContainerOfDependencies, UpdateChecker(redo));
+  // Update a container of references.
+//  for_each(MapOfDependencies, UpdateMapChecker(redo));
+  // Update a map of references.
+  if ( !redo ) return;
+  // return if nothing has been touched. Otherwise do the actual update.
+//  touch()
+  // Touch if anything has changed.
+}
+
+inline void ModelGenerator::doinit() throw(InitException) {
+  Interfaced::doinit();
+}
+
+inline void ModelGenerator::dofinish() {
+  Interfaced::dofinish();
+}
+
+inline void ModelGenerator::doinitrun() {
+  Interfaced::doinitrun();
+}
+
+inline void ModelGenerator::rebind(const TranslationMap & trans)
+  throw(RebindException) {
+  // dummy = trans.translate(dummy);
+  Interfaced::rebind(trans);
+}
+
+inline IVector ModelGenerator::getReferences() {
+  IVector ret = Interfaced::getReferences();
+  // ret.push_back(dummy);
+  return ret;
+}
+
+}
